--- a/startPointSeekBarDemo/src/main/res/layout/activity_main.xml
+++ b/startPointSeekBarDemo/src/main/res/layout/activity_main.xml
@@ -6,12 +6,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.vashisthg.startpointseekbardemo.MainActivity">
+    tools:context="com.vashisthg.startpointseekbardemo.MainActivity"
+    android:focusableInTouchMode="false">
 
     <FrameLayout
         android:id="@+id/seekbarwrapper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="100dp" />
 
 
 </RelativeLayout>
